# OpenSCAD-is-not-a-fad

./: .gitignore  3.5 to 2.5 sled.scad  3.5_fan.scad  FloppyDriveSled_3.5-2.5.scad  HardDriveSled_3.5-2.5.scad  Name Plate.scad  Nameplate_for_ezi.scad  Pipfile  Werewolf Insert.scad  alarm_clock_shelf.scad  ball_die.scad  ball_die_base.stl  ball_die_pips.stl  bandaid box.scad  bathroom sink fix.scad  bfo9k.scad  big_cone.scad  borromean die.scad  bracket.scad  cable clip corner.scad  cable clip.scad  chandler shim.scad  charty_party_lifter.scad  coleman_cap.scad  color_example.scad  cone.scad  couch casters.scad  craft_knife.scad  d12_rhombic.scad  d12_rhombic_base.stl  d12_rhombic_pips.stl  d4_twist.scad  egg_crate.scad  eurion stamp.scad  eurion.scad  flags.scad  flask_funnel.scad  forevermask.scad  fume_extractor_b.scad  fume_extractor_d.scad  (+42 more)
001 completed/: Werewolf Insert.scad  flexitailgear_adapter.scad  headband.scad  monitor led clip.scad  padded_box.scad  pepper collet.scad
003 not progressing/: TTB Small.scad  ceramic_bits.scad  currogation tests.scad  insecurityshirt.scad  keyboard photo frame.scad  microphone arm insert.scad  rocket_book_tearaway.scad  shelf_fix.scad  shell_lib.scad
LockedForge/: LockedForge 1x1.stl  LockedForge 1x2.stl  LockedForge 3x3.stl  LockedForge 5x1.stl  batteries.scad  modules.scad  solder holder.stl
Temp Tower/: Temp Tower 2.scad  Temp Tower 210 250.stl
Turing/: turing.scad
bar keepers lover/: bar keepers lover.scad
bfok9k/: bottom-fast.stl  bottom-fast2.stl  bottom.scad  fast=true  outtop.stl
blue mask/: idk.scad
(+763 files in other folders)
