[tool.poetry]
name = "openscad-is-not-a-fad"
version = "0.1.0"
description = ""
authors = ["Peter Villano <peter@saej.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
solidpython = "^1.1.3"
trio = "^0.27.0"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
